oc-manifests/exchange-rate/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exchange-rate-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exchange-rate-service
  template:
    metadata:
      labels:
        app: exchange-rate-service
    spec:
      containers:
      - name: exchange
        image: docker.io/vishnu11/exchange-rate:2.0.0
        ports:
        - containerPort: 5001
