oc-manifests/exchange-rate/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exchange-rate-service
spec:
  selector:
    app: exchange-rate-service
  ports:
  - port: 5001
    targetPort: 5001
